--- a/project.ipynb
+++ b/project.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
      "text": [
       "<>:8: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:8: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\thest\\AppData\\Local\\Temp\\ipykernel_25168\\1775959400.py:8: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\thest\\AppData\\Local\\Temp\\ipykernel_20852\\1775959400.py:8: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  melted_data['year'] = melted_data['year'].str.extract('(\\d+)').astype(int)\n"
      ]
     },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
      "text": [
       "<>:6: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:6: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\thest\\AppData\\Local\\Temp\\ipykernel_25168\\387694255.py:6: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\thest\\AppData\\Local\\Temp\\ipykernel_20852\\387694255.py:6: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  melted_data['year'] = melted_data['year'].str.extract('(\\d+)').astype(int)\n"
      ]
     },
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -829,10 +829,10 @@
      "evalue": "name 'gpd' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Read and merge shapefile\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m zips \u001b[38;5;241m=\u001b[39m \u001b[43mgpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_file(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mshapefiles/nhgis0010_shape/nhgis0010_shape/nhgis0010_shapefile_tl2010_us_zcta_2010/US_zcta_2010.shp\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m data_table[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mzip\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m data_table[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mzip\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)\n\u001b[0;32m      4\u001b[0m zips[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGEOID10\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m zips[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGEOID10\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'gpd' is not defined"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Read and merge shapefile\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m zips = \u001b[43mgpd\u001b[49m.read_file(\u001b[33m'\u001b[39m\u001b[33mshapefiles/nhgis0010_shape/nhgis0010_shape/nhgis0010_shapefile_tl2010_us_zcta_2010/US_zcta_2010.shp\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      3\u001b[39m data_table[\u001b[33m'\u001b[39m\u001b[33mzip\u001b[39m\u001b[33m'\u001b[39m] = data_table[\u001b[33m'\u001b[39m\u001b[33mzip\u001b[39m\u001b[33m'\u001b[39m].astype(\u001b[38;5;28mint\u001b[39m)\n\u001b[32m      4\u001b[39m zips[\u001b[33m'\u001b[39m\u001b[33mGEOID10\u001b[39m\u001b[33m'\u001b[39m] = zips[\u001b[33m'\u001b[39m\u001b[33mGEOID10\u001b[39m\u001b[33m'\u001b[39m].astype(\u001b[38;5;28mint\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'gpd' is not defined"
      ]
     }
    ],
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.674\n",
       "Method:                 Least Squares   F-statistic:                     3196.\n",
       "Date:                Wed, 05 Mar 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        08:55:07   Log-Likelihood:                 2623.4\n",
+      "Time:                        10:24:20   Log-Likelihood:                 2623.4\n",
       "No. Observations:                7732   AIC:                            -5235.\n",
       "Df Residuals:                    7726   BIC:                            -5193.\n",
       "Df Model:                           5                                         \n",
@@ -943,7 +943,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\thest\\AppData\\Local\\Temp\\ipykernel_25168\\571455922.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\thest\\AppData\\Local\\Temp\\ipykernel_20852\\571455922.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -967,58 +967,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table style=\"text-align:center\"><tr><td colspan=\"5\" style=\"border-bottom: 1px solid black\"></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td colspan=\"4\"><em>Dependent variable: value_ratio_2017</em></td></tr><tr><td style=\"text-align:left\"></td><tr><td></td><td colspan=\"4\">Home Value Change (%) (2010-2017)</td></tr><tr><td style=\"text-align:left\"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td></tr>\n",
-       "<tr><td colspan=\"5\" style=\"border-bottom: 1px solid black\"></td></tr>\n",
-       "\n",
-       "<tr><td style=\"text-align:left\">early_late_ratio</td><td>0.075<sup>***</sup></td><td>0.032<sup>**</sup></td><td></td><td></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td>(0.026)</td><td>(0.015)</td><td></td><td></td></tr>\n",
-       "<tr><td style=\"text-align:left\">early_mmi</td><td></td><td></td><td>0.003<sup>***</sup></td><td></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td>(0.000)</td><td></td></tr>\n",
-       "<tr><td style=\"text-align:left\">early_mmi_ratio</td><td></td><td></td><td></td><td>0.030<sup>**</sup></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td>(0.015)</td></tr>\n",
-       "<tr><td style=\"text-align:left\">early_move_ins</td><td></td><td></td><td>-0.000<sup>***</sup></td><td></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td>(0.000)</td><td></td></tr>\n",
-       "<tr><td style=\"text-align:left\">intercept</td><td>1.336<sup>***</sup></td><td>0.133<sup>***</sup></td><td>0.156<sup>***</sup></td><td>0.151<sup>***</sup></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td>(0.003)</td><td>(0.010)</td><td>(0.010)</td><td>(0.010)</td></tr>\n",
-       "<tr><td style=\"text-align:left\">late_mmi</td><td></td><td></td><td>0.000<sup></sup></td><td></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td>(0.000)</td><td></td></tr>\n",
-       "<tr><td style=\"text-align:left\">late_mmi_ratio</td><td></td><td></td><td></td><td>0.180<sup>***</sup></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td></td><td>(0.017)</td></tr>\n",
-       "<tr><td style=\"text-align:left\">late_move_ins</td><td></td><td></td><td>-0.000<sup>***</sup></td><td></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td></td><td></td><td>(0.000)</td><td></td></tr>\n",
-       "<tr><td style=\"text-align:left\">msa_avg_value_ratio_2019</td><td></td><td>0.806<sup>***</sup></td><td>0.801<sup>***</sup></td><td>0.777<sup>***</sup></td></tr>\n",
-       "<tr><td style=\"text-align:left\"></td><td></td><td>(0.007)</td><td>(0.007)</td><td>(0.007)</td></tr>\n",
-       "\n",
-       "<td colspan=\"5\" style=\"border-bottom: 1px solid black\"></td></tr>\n",
-       "<tr><td style=\"text-align: left\">Observations</td><td>7732</td><td>7732</td><td>7732</td><td>7732</td></tr><tr><td style=\"text-align: left\">R<sup>2</sup></td><td>0.001</td><td>0.664</td><td>0.674</td><td>0.678</td></tr><tr><td style=\"text-align: left\">Adjusted R<sup>2</sup></td><td>0.001</td><td>0.664</td><td>0.674</td><td>0.678</td></tr><tr><td style=\"text-align: left\">Residual Std. Error</td><td>0.302 (df=7730)</td><td>0.175 (df=7729)</td><td>0.172 (df=7726)</td><td>0.171 (df=7728)</td></tr><tr><td style=\"text-align: left\">F Statistic</td><td>8.445<sup>***</sup> (df=1; 7730)</td><td>7624.077<sup>***</sup> (df=2; 7729)</td><td>3195.555<sup>***</sup> (df=5; 7726)</td><td>5424.707<sup>***</sup> (df=3; 7728)</td></tr>\n",
-       "<tr><td colspan=\"5\" style=\"border-bottom: 1px solid black\"></td></tr><tr><td style=\"text-align: left\">Note:</td><td colspan=\"4\" style=\"text-align: right\"><sup>*</sup>p&lt;0.1; <sup>**</sup>p&lt;0.05; <sup>***</sup>p&lt;0.01</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{table}[!htbp] \\centering\n",
+      "\\begin{tabular}{@{\\extracolsep{5pt}}lcccc}\n",
+      "\\\\[-1.8ex]\\hline\n",
+      "\\hline \\\\[-1.8ex]\n",
+      "& \\multicolumn{4}{c}{\\textit{Dependent variable: value_ratio_2017}} \\\n",
+      "\\cr \\cline{2-5}\n",
+      "\\\\[-1.8ex] & \\multicolumn{4}{c}{Home Value Change (%) (2010-2017)}  \\\\\n",
+      "\\\\[-1.8ex] & (1) & (2) & (3) & (4) \\\\\n",
+      "\\hline \\\\[-1.8ex]\n",
+      " early_late_ratio & 0.075$^{***}$ & 0.032$^{**}$ & & \\\\\n",
+      "& (0.026) & (0.015) & & \\\\\n",
+      " early_mmi & & & 0.003$^{***}$ & \\\\\n",
+      "& & & (0.000) & \\\\\n",
+      " early_mmi_ratio & & & & 0.030$^{**}$ \\\\\n",
+      "& & & & (0.015) \\\\\n",
+      " early_move_ins & & & -0.000$^{***}$ & \\\\\n",
+      "& & & (0.000) & \\\\\n",
+      " intercept & 1.336$^{***}$ & 0.133$^{***}$ & 0.156$^{***}$ & 0.151$^{***}$ \\\\\n",
+      "& (0.003) & (0.010) & (0.010) & (0.010) \\\\\n",
+      " late_mmi & & & 0.000$^{}$ & \\\\\n",
+      "& & & (0.000) & \\\\\n",
+      " late_mmi_ratio & & & & 0.180$^{***}$ \\\\\n",
+      "& & & & (0.017) \\\\\n",
+      " late_move_ins & & & -0.000$^{***}$ & \\\\\n",
+      "& & & (0.000) & \\\\\n",
+      " msa_avg_value_ratio_2019 & & 0.806$^{***}$ & 0.801$^{***}$ & 0.777$^{***}$ \\\\\n",
+      "& & (0.007) & (0.007) & (0.007) \\\\\n",
+      "\\hline \\\\[-1.8ex]\n",
+      " Observations & 7732 & 7732 & 7732 & 7732 \\\\\n",
+      " $R^2$ & 0.001 & 0.664 & 0.674 & 0.678 \\\\\n",
+      " Adjusted $R^2$ & 0.001 & 0.664 & 0.674 & 0.678 \\\\\n",
+      " Residual Std. Error & 0.302 (df=7730) & 0.175 (df=7729) & 0.172 (df=7726) & 0.171 (df=7728) \\\\\n",
+      " F Statistic & 8.445$^{***}$ (df=1; 7730) & 7624.077$^{***}$ (df=2; 7729) & 3195.555$^{***}$ (df=5; 7726) & 5424.707$^{***}$ (df=3; 7728) \\\\\n",
+      "\\hline\n",
+      "\\hline \\\\[-1.8ex]\n",
+      "\\textit{Note:} & \\multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\\\\n",
+      "\\end{tabular}\n",
+      "\\end{table}\n"
+     ]
     }
    ],
    "source": [
     "stargazer = Stargazer([model1, model2, model3, model4])\n",
     "stargazer.custom_columns([\"Home Value Change (%) (2010-2017)\"],[4])\n",
-    "HTML(stargazer.render_html())\n",
-    "#print(stargazer.render_latex()) #if you use Latex (Overleaf.com)"
+    "# HTML(stargazer.render_html())\n",
+    "print(stargazer.render_latex()) #if you use Latex (Overleaf.com)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1037,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.678\n",
       "Method:                 Least Squares   F-statistic:                     5425.\n",
       "Date:                Wed, 05 Mar 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        08:55:16   Log-Likelihood:                 2670.8\n",
+      "Time:                        10:24:25   Log-Likelihood:                 2670.8\n",
       "No. Observations:                7732   AIC:                            -5334.\n",
       "Df Residuals:                    7728   BIC:                            -5306.\n",
       "Df Model:                           3                                         \n",
@@ -1078,7 +1084,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
