Update presentation content and add to-do list

--- a/presentation_1/presentation_1.tex
+++ b/presentation_1/presentation_1.tex
@@ -21,27 +21,6 @@
 \begin{frame}
     \maketitle
 \end{frame}
-\begin{frame}
-\frametitle{Background}
-\begin{itemize}
-    \item Housing discrimination: long-running problem in US
-    \item Common historical tactics: racial deed covenants, redlining, white flight, and blockbusting (Rothstein, 2017).
-    \item Long-term effects:
-    
-    \small
-    Deed covenants improve relative neighborhood quality (Sood, Ehrman-Solberg, 2024), 
-    Redlining localizes poverty (Appel, Nickerson, 2016),
-    Majority-Black neighborhoods still have lower quality of opportunity (Chetty et al., 2014),
-
-    \normalsize
-    \item Modern discrimination persists:
-    
-    \small
-    Lending disparities (Quillian, Lee, Honoré, 2020).
-    Racial steering in real estate (Glenn, 2018).
-    
-\end{itemize}
-\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 \frametitle{Introduction}
@@ -58,15 +37,37 @@
 \end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\framedgraphic{Data}{project_files/project_40_0.png}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-\frametitle{Results}
-\begin{itemize}
-    \item Relatively inconclusive
-    \item Some indication of suppression of home values but not significant
-\end{itemize}
+    \frametitle{Background}
+    \begin{itemize}
+        \item Housing discrimination: long-running problem in US
+        \item Common historical tactics: racial deed covenants, redlining, white flight, and blockbusting (Rothstein, 2017).
+        \item Long-term effects:
+        
+        \small
+        Deed covenants improve relative neighborhood quality (Sood, Ehrman-Solberg, 2024), 
+        Redlining localizes poverty (Appel, Nickerson, 2016),
+        Majority-Black neighborhoods still have lower quality of opportunity (Chetty et al., 2014),
+    
+        \normalsize
+        \item Modern discrimination persists:
+        
+        \small
+        Lending disparities (Quillian, Lee, Honoré, 2020).
+        Racial steering in real estate (Glenn, 2018).
+        
+    \end{itemize}
 \end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \framedgraphic{Data}{project_files/project_40_0.png}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \begin{frame}
+% \frametitle{Results}
+% \begin{itemize}
+%     \item Relatively inconclusive
+%     \item Some indication of suppression of home values but not significant
+% \end{itemize}
+% \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \framedgraphic{Results}{project_files/project_43_1.png}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
