slight refactor, presentation progress

--- a/documents/presentation_1/presentation_1.tex
+++ b/documents/presentation_1/presentation_1.tex
@@ -1,6 +1,7 @@
 \documentclass[aspectratio=169]{beamer}
 \setbeamertemplate{navigation symbols}{}
 \usepackage{graphicx}
+\usepackage{booktabs}
 \usepackage{xcolor}
 \newcommand {\framedgraphic}[2] {
     \begin{frame}{#1}
@@ -26,7 +27,7 @@
 \frametitle{Introduction}
 \begin{itemize}
     \item Investigates whether minority move-ins suppress home-value appreciation.
-    \item Uses loan data (Fannie Mae \& Freddie Mac), ACS (Census) data for normalization, and Zillow ZHVI for home prices.
+    \item Uses loan data (Fannie Mae \& Freddie Mac) for move-ins, ACS (Census) data for normalization, and zip-code level Zillow ZHVI for home prices.
     \item Methodology:
     \begin{itemize}
         \item Select majority-white zip codes with minority move-ins (2009-2010).
@@ -45,33 +46,68 @@
         \item Long-term effects:
         
         \small
-        Deed covenants improve relative neighborhood quality (Sood, Ehrman-Solberg, 2024), 
-        Redlining localizes poverty (Appel, Nickerson, 2016),
-        Majority-Black neighborhoods still have lower quality of opportunity (Chetty et al., 2014),
+        - Deed covenants improve relative neighborhood quality (Sood, Ehrman-Solberg, 2024), \\
+        - Redlining localizes poverty (Appel, Nickerson, 2016), \\
+        - Majority-Black neighborhoods maintain lower quality of opportunity (Chetty et al., 2014),
     
         \normalsize
         \item Modern discrimination persists:
         
         \small
-        Lending disparities (Quillian, Lee, Honoré, 2020).
-        Racial steering in real estate (Glenn, 2018).
+        - Lending disparities (Quillian, Lee, Honoré, 2020), \\
+        - Racial steering in real estate (Glenn, 2018)
         
     \end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \framedgraphic{Data}{project_files/project_40_0.png}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \begin{frame}
-% \frametitle{Results}
-% \begin{itemize}
-%     \item Relatively inconclusive
-%     \item Some indication of suppression of home values but not significant
-% \end{itemize}
-% \end{frame}
+\begin{frame}
+    \frametitle{Data: Home Value Appreciation (\%) (difference to MSA average) (by year)}
+        \centering
+        \begin{tabular}{lrrrrrrrr}
+            \toprule
+            Year & count & mean & std & min & 25\% & 50\% & 75\% & max \\
+            \midrule
+            \textbf{2011} & 11376 & 0.0016 & 0.0375 & -0.2958 & -0.0149 & 0.0038 & 0.0213 & 0.2751 \\
+            \textbf{2012} & 11376 & 0.0017 & 0.0587 & -0.4130 & -0.0258 & 0.0038 & 0.0330 & 0.3739 \\
+            \textbf{2013} & 11376 & -0.0005 & 0.0782 & -0.4971 & -0.0384 & 0.0004 & 0.0395 & 0.6301 \\
+            \textbf{2014} & 11376 & -0.0005 & 0.0962 & -0.6182 & -0.0480 & -0.0024 & 0.0442 & 0.8238 \\
+            \textbf{2015} & 11376 & 0.0000 & 0.1192 & -0.6584 & -0.0599 & -0.0053 & 0.0506 & 1.1286 \\
+            \textbf{2016} & 11376 & -0.0011 & 0.1439 & -0.7405 & -0.0726 & -0.0092 & 0.0550 & 1.4750 \\
+            \textbf{2017} & 11376 & -0.0010 & 0.1724 & -0.8327 & -0.0873 & -0.0125 & 0.0610 & 1.7768 \\
+            \textbf{2018} & 11376 & -0.0006 & 0.2089 & -0.9294 & -0.1023 & -0.0175 & 0.0696 & 2.3199 \\
+            \textbf{2019} & 11376 & 0.0004 & 0.2312 & -1.0062 & -0.1133 & -0.0198 & 0.0783 & 2.7326 \\
+            \bottomrule
+        \end{tabular}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+    \frametitle{Data: Minority Move-ins}
+    \centering\begin{tabular}{lrrrr}
+        \toprule
+         & MMI (I) & MMI (T) & MI (I) & MI (T) \\
+        \midrule
+        \textbf{Count} & 33503 & 33503 & 33503 & 33503 \\
+        \textbf{Mean} & 1 & 6 & 12 & 62 \\
+        \textbf{Standard Deviation} & 4 & 20 & 37 & 148 \\
+        \textbf{Minimum} & 0 & 0 & 0 & 0 \\
+        \textbf{25th Percentile} & 0 & 0 & 0 & 0 \\
+        \textbf{Median} & 0 & 0 & 0 & 0 \\
+        \textbf{75th Percentile} & 0 & 2 & 2 & 46 \\
+        \textbf{Maximum} & 113 & 620 & 641 & 1961 \\
+        \textbf{Range} & 113 & 620 & 641 & 1961 \\
+        \bottomrule
+        \end{tabular}
+
+        MMI = Minority Move-Ins, MI = Total Move-Ins
+        
+        I = Initial Period, T = Treatment Period
+\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \framedgraphic{Results}{project_files/project_43_1.png}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\framedgraphic{Results}{project_files/project_46_0.png}
+\framedgraphic{Results}{project_files/project_39_0.png}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \framedgraphic{Results}{project_files/project_49_1.png}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
